--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,109 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Cache stats</title>
+    <title>IBM Cloud Data Services | Simple Cache Service</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/master.css" type="text/css">
+    <link rel="stylesheet" href="css/scs.css" type="text/css">
 
-    <script src="/js/jquery-2.2.4.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      socket.on('update', function(data) {
-        $('#numkeys').text(data.keys)
-        $('#memusage').text(data.memory)
-        $('#memh').show()
-        if (!data.memory) {
-          $('#memh').hide()
-        }
-      })
-    </script>
-
+    <script src="/js/vue.js"></script>
+    <script src="/js/vue-router.min.js"></script>
+    <script src="/js/scs.js"></script>
   </head>
 
-  <body>
+  <body id="cacheservice" class="capped-layout">
+    <header class="capped-layout_cap app-banner">
+      <a class="app-banner_title" rel="home" href="https://developer.ibm.com/clouddataservices">IBM Cloud Data Services // Dev</a>
+    </header>
 
-    <div class="container" id="app">
-      
-      <h1>Stats</h1>
+    <div class="capped-layout_body bookend-layout">
+      <nav class="bookend-layout_bookend theme_light bg_white">
+        <ul class="tree-nav">
+          <li class="tree-nav_item">
+            <a class="tree-nav_link top-nav" v-link="{path: '/'}">Simple Cache Service</a>
+            <ul class="tree-nav">
+              <li class="tree-nav_item">
+                <a class="tree-nav_link" v-link="{path: '/stats'}">Statistics</a></li>
+              <li class="tree-nav_item">
+                <a class="tree-nav_link" v-link="{path: '/ingredients'}">Ingredients</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
 
-      <h2><span id="numkeys">0</span> Keys in cache</h2>
-      <h2 id="memh"><span id="memusage">0k</span> of memory used</h2>
+      <div class="bookend-layout_body theme_dark scrollable-y">
+        <router-view></router-view>
+      </div>
+    </div>
 
-    </div> <!-- /container -->
 
+<!-- START template: about -->
+    <script type="text/x-template" id="about">
+      <section class="layout_section ng-scope">
+        <h1 class="type_heading">
+          <mark class="type_mark">Welcome to the Simple Cache Service!</mark>
+        </h1>
+        <p class="type_copy">
+          The <a class="type_link" target="_blank"
+            href="https://github.com/ibm-cds-labs/simple-cache-service">
+            Simple Cache Service</a> provides a simple key/value cache service, via an HTTP API.
+        </p>
+      </section>
+    </script>
+<!-- END template: about -->
+
+<!-- START template: stats -->
+    <script type="text/x-template" id="stats">
+      <section class="layout_section theme_light">
+        <h1 class="type_heading">
+          <mark class="type_mark">Statistics</mark>
+        </h1>
+        <p class="type_copy">
+          Cache statistics
+        </p>
+      </section>
+      <section class="layout_section">
+        <p class="type_subhead">Number of keys in the cache: <span class="type_mark">{{numkeys}}</span></p>
+        <p class="type_subhead" v-show="memusage">Memory being used by the cache: <span class="type_mark">{{memusage}}</span></p>
+      </section>
+    </script>
+<!-- END template: stats -->
+
+<!-- START template: ingredients -->
+    <script type="text/x-template" id="ingredients">
+      <section class="layout_section theme_light">
+        <h1 class="type_heading">
+          <mark class="type_mark">Ingredients</mark>
+        </h1>
+        <p class="type_copy">
+          The stuff that's baked in.
+        </p>
+      </section>
+      <section class="layout_section">
+        <dl>
+          <dt>
+            <mark class="type_mark">Runtime</mark>
+          </dt>
+          <dd class="type_copy">
+            This is a Node.js app running on IBM Bluemix. <a href="https://nodejs.org/en/" class="type_link" target="_blank">Node.js</a> code is JavaScript running on the server side. Node.js has a rich collection of add-on libraries that can be baked into your applications using the <a href="https://npmjs.org/" class="type_link">npm</a> package manager. This application uses the <a href="http://expressjs.com/" class="type_link" target="_blank">Express</a> web framework.
+          </dd>
+          <dt>
+            <mark class="type_mark">Storage</mark>
+          </dt>
+          <dd class="type_copy">
+            By default this application caches the key/value in memory, but support is also available for <a target="_blank" class="type_link" href="https://www.compose.io/articles/get-started-with-redis-on-compose/">Redis by Compose</a>.
+          </dd>
+          <dt>
+            <mark class="type_mark">Code</mark>
+          </dt>
+          <dd class="type_copy">
+            Simple Cache Service is an open-source project published under the Apache-2.0 license. This means that it is free for you to use, copy or modify in any way. Feel free to download the <a href="https://github.com/ibm-cds-labs/simple-cache-service/" target="_blank" class="type_link">code on Github</a> and alter it to suit your own purposes. Contributions to this project are welcome: either raise an <a href="https://github.com/ibm-cds-labs/simple-cache-service/issues" class="type_link" target="_blank">Issue on Github</a> or if you fix or improve something, <a href="https://github.com/ibm-cds-labs/simple-cache-service#fork-destination-box" class="type_link" target="_blank">Fork the code</a>, alter it and send us a pull request. 
+          </dd>
+        </dl>
+      </section>
+    </script>
+<!-- END template: ingredients -->
   </body>
 </html>
