tweaks to ingredients

--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,12 @@
           <dd class="type_copy">
             Simple Cache Service is an open-source project published under the Apache-2.0 license. This means that it is free for you to use, copy or modify in any way. Feel free to download the <a href="https://github.com/ibm-cds-labs/simple-cache-service/" target="_blank" class="type_link">code on Github</a> and alter it to suit your own purposes. Contributions to this project are welcome: either raise an <a href="https://github.com/ibm-cds-labs/simple-cache-service/issues" class="type_link" target="_blank">Issue on Github</a> or if you fix or improve something, <a href="https://github.com/ibm-cds-labs/simple-cache-service#fork-destination-box" class="type_link" target="_blank">Fork the code</a>, alter it and send us a pull request. 
           </dd>
+          <dt>
+            <mark class="type_mark">Service Discovery</mark>
+          </dt>
+          <dd class="type_copy">
+            Simple Cache Service is one of a suite of example micro services that have been developed by the IBM Cloud Data Services team. It is possible to combine some of these services together to create a larger, distributed system using automated service discovery. The Simple Cache Service can be used to extend the <a target="_blank" class="type_link" href="https://github.com/ibm-cds-labs/simple-search-service">Simple Search Service</a> to allow for the caching of searches.
+          </dd>
         </dl>
       </section>
     </script>
